# Key-Value-store

./: C++ naming standard.md  CMakeLists.txt  KVCache.cpp  KVClient.cpp  KVServer.cpp  KVStore.cpp  KVStore_file  Makefile  README.md  README.txt  Response1.txt  ThreadPool.h  Threadpool.cpp  batch.txt  batchResponse.txt  batchRun.txt  checkOutput.sh  client  codingstandards-2-performance_and_safety.md  config.h  header.hpp  linked_list.cpp  request  response.txt  response1.txt  response2.txt  server
KVStore/: 0  1  10  11  12  13  14  15  16  17  18  19  2  3  4  5  6  7  8  9
